set(CMAKE_C_FLAGS "-g")
project(leetcode)
aux_source_directory(. SRC)
add_executable(median.out median-of-two-sorted-arrays.c)
add_executable(reverse.out 25-reverse-nodes-in-k-group.c)
add_executable(3.out 3-longest-substring-without-repeating-characters.c)
add_executable(5.out 5-longest-palindromic-substring.c)
add_executable(snprintf.out snprintf.c)
cmake_minimum_required(VERSION 3.15)
